--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
         </div>
         <button id="create-slider" class="btn btn-primary px-5">Create slider</button>
       </div>
+      <div>
+        <h3>Total Images: <span id="ImageCount">0</span></h3>
+      </div>
       <div class="row gallery">
 
       </div>
